metadata/force-app/main/default/objects/CustomName_oWTkV__c/CustomName_oWTkV__c.object-meta.xml
<CustomObject>
    <description>Description_DJvwz</description>
    <label>CustomLabel_bRfZz</label>
    <nameField>
        <label>CustomLabel_bRfZz</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bRfZzs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>