metadata/force-app/main/default/objects/CustomName_oWTkV__c/fields/CustomField_eNAkz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eNAkz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmVrMH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>