metadata/force-app/main/default/objects/CustomName_oWTkV__c/fields/CustomField_mXBLw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mXBLw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldCxtvm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>